--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -1,9 +1,9 @@
 <pre class='metadata'>
-Title:  <code>indirect_value</code>: An indirect value-type for C++
+Title:  <code>indirect_value</code>: A Free-Store-Allocated Value Type For C++
 Shortname: P1950
 URL: wg21.link/P1950r0
 Revision: 0
-Audience: LWG
+Audience: LEWGI
 Status: P
 Group: WG21
 Issue Tracking: GitHub https://github.com/jbcoe/indirect_value/issues
@@ -16,20 +16,14 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 </pre>
 
 # Abstract
-Add a class template, indirect_value, to the standard library to support indirect objects with value-like semantics.
+Add a class template, indirect_value, to the C++ Standard Library to support free-store-allocated objects with value
+-like semantics.
+
 # Introduction
-The class template, indirect_value, confers value-like semantics on a freestore allocated object. An indirect_value may hold an object of a class T, copying the indirect_value will copy the object of T, and constness will propagate from the owning classes to the indirect_value type.
+The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An indirect_value may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
-## Motivation
-
-The C++ standard includes support for numerous smart pointer templates, with support for new addition ongoing [Meneide et al].  One common use for these types is as the pointer-to-implementation in the Pimpl idiom [H.Sutter 11]. If the application design requires deep-copy semantic when the type is moved, existing pointer types, <code>std::unique_ptr</code> and <code>std::shared_ptr</code> are not the correct tools for the job.
-
-One option for value semantics is the use of <code>std::experimental::polymophic_value</code>. However, <code>polymophic_value</code> provides a solution to the *polymorphic copying problem*, which requires the use of type-erasure.  Such implementation details incur a cost. However, use of the Pimpl idiom will likely not involve polymorphic types.  As such using <code>polymophic_value</code> means paying for features that are not used.
-
-In this case, what is needed is value semantics for an indirectly owned value.  This paper proposes the <code>indirect_value</code> template for future standardisation. The issues to be addressed will be examined in further detail, prior art on the subject will be discussed and finally, open questions posed.
-
-## Perfect-Pimpl
-In C++, when anything in a class definition changes dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the Pimpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the Pimpl idiom requires thought about implementation details around copying and to support this feature require user intervention. 
+## Motivation - a perfect PImpl
+In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
 ```
 // Header file
@@ -39,7 +33,7 @@ public:
     ~widget();
 private:
     class impl;
-    std::experimental::propagate_const<std::unique_ptr<impl>> pimpl;
+    std::unique_ptr<impl> pimpl_;
 };
  
 // Implementation file
@@ -47,50 +41,35 @@ class widget::impl {
     // :::
 };
  
-widget::widget() : pimpl{ std::make_unique<impl>( /*...*/  } { }
+widget::widget() : pimpl_{ std::make_unique<impl>( /*...*/  } { }
 widget::~widget() = default;
 ```
+For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>PImpl</code> class”. Note, semantically the <code>PImpl</code> class is the implementation details of the visible class.
 
-For convenience, the widget class will be referred to as the “visible class” and impl class the “<code>Pimpl</code> class”. Note, semantically the <code>Pimpl</code> class is the implementation details of the visible class.  As such it is important that constness propagates from the visible to the <code>Pimpl</code> class, this is achieved by the implementation here making use of <code>propagate_const</code>. Using <code>std::unique_ptr</code> the exposed class gets compiler-generated move semantics, but not copy semantic.  If these are required the user must now manually define a copy-constructor and assignment operator.
+### Issues with `unique_ptr<impl>` implementation of PImpl Idiom
+#### const-propagation
 
-```
-// Header file
-class widget {
-public:
-    widget();
-    ~widget();
+Using <code>std::unique_ptr</code> to store the implementation object introduces an issue: within a `const`-qualified member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
-    widget(const widget&);
-    widget& operator=(const widget&);
-private:
-    class impl;
-    std::experimental::propagate_const<std::unique_ptr<impl>> pimpl;
-};
- 
-// Implementation file
-class widget::impl {
-    // :::
-};
+The compiler is unable to give thread-compatibility guarantees for `const` objects when
+`const` is not propagated - `const` does not mean immutable in the face of pointer-like-member data.
 
-widget::widget() : pimpl{ std::make_unique<impl>() } {}
-widget::~widget() = default;
+The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const`- and non-`const`-qualified overloads
+for `operator*` and `operator->`. 
 
-widget::widget(const widget& rhs)
-{ if (rhs.pimpl) { pimpl = std::make_unique<impl>(*pimpl); }   }
+#### copies
+The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
-widget& widget::operator=(const widget& rhs)
-{
-    if (!rhs.pimpl ) { get_underlying(pimpl).reset(); }
-    else if (!pimpl ) { std::make_unique<impl>(*rhs.pimpl); }
-    else { *pimpl = *rhs.pimpl; }
+### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
+The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our
+requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
+To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to
+virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
 
-    return *this;
-}
-
-```
-However, this is boilerplate code that must be repeated per Pimpl implementation.  Worse still we are not able to benefit from the rule-of-zero to have the compiler generate the methods for use.
-
-Using the proposed indirect_value Pimpl classes could be implemented to take advantage of the rule-of-zero to provide compiler-generated method implementations.  Note this is implementations only, function declarations are required in the header and in the source file with the <code>default</code> keyword in-order to instruct the compiler to generate the function bodies in the source translation unit where the definition of the implementation class is visible to the compiler, as discussed in [S. Meyers].   
+### Perfect Implementation of the PImpl Idiom
+Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike
+ `polymorphic_value`,
+`indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
 
 ```
 // Header file
@@ -123,13 +102,12 @@ widget::~widget() = default;
 Now the visible class has compiler-generated copy and move constructors, copy and move assignment operators and destructor.  All of these compiler-generated functions will behave correctly.  
 
 ## Prior Art
+There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
-There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed first to <code>indirect</code> (an indirect value type) and again to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
-
-This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "Pimpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
+This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
 
 ## Completeness of T*
-Recommended practice for pointer-to-implementation of Pimpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
+Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
 
 <table>
 <thead>
@@ -248,13 +226,17 @@ The template parameter T of indirect_value may be an incomplete type.
     template <class T, class C = std::default_copy<T>, class D = std::default_delete<T>>
     class indirect_value {
     public:
-        using element_type = T;
+        using value_type = T;
+
         // Constructors
         constexpr indirect_value() noexcept;
         explicit indirect_value(T* p, C c=C{}, D d=D{});
 
         indirect_value(const indirect_value& p);
         indirect_value(indirect_value&& p) noexcept;
+
+        template <class ...Ts>
+        indirect_value(std::in_place_t, Ts&&... ts);
 
         // Destructor
         ~indirect_value();
@@ -268,9 +250,9 @@ The template parameter T of indirect_value may be an incomplete type.
 
         // Observers
         T& operator*();
-        T* operator->() noexcept;
+        T* operator->();
         const T& operator*() const;
-        const T* operator->() const noexcept;
+        const T* operator->() const;
         explicit operator bool() const noexcept;
     };
 
@@ -300,6 +282,7 @@ The template parameter T of indirect_value may be an incomplete type.
 * Remarks: A custom copier and deleter are said to be ‘present’ in a indirect_value initialised with this constructor.
 
 <code>indirect_value(const indirect_value& p);</code>
+* Constraints: is_copy_constructible_v<T>
 * Effects: Creates a indirect_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Postconditions: bool(*this) == bool(p).
@@ -309,12 +292,17 @@ The template parameter T of indirect_value may be an incomplete type.
 * Postconditions: *this contains the old value of p. p is empty.
 * Remarks: The method shall work with incomplete pointer type for T.
 
+<code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
+* Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
+* Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
+
 ### X.Y.4 Class template indirect_value destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
 * Effects: If get() == nullptr there are no effects. If a custom deleter d is present then d(p) is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
 
 ### X.Y.5 Class template indirect_value assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
+* Constraints: is_copy_assignable<T>
 * Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise, the resource managed by *this is initialised by the copy constructor of the resource managed by p.
 * Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
 * Returns: *this.
@@ -350,8 +338,20 @@ const T* operator->() const noexcept;
 * Returns: false if the indirect_value is empty, otherwise true.
 * Remarks: The method shall work with incomplete pointer type for T.
 
+### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
+
+```cpp
+template <class T, class U=T, class ...Ts> indirect_value<T>
+  make_indirect_value(Ts&& ...ts);
+```
+
+* Constraints: `is_constructible_v<U, Ts...>` is true.
+* Expects: `U` meets the `Cpp17CopyConstructible` requirements.
+* Returns: A `indirect_value<T>` owning an object of type ``
+  direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+
 # Acknowledgements
-The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going inspiration.
+The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
 
 # References
 
@@ -368,6 +368,8 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 [H. Sutter 11] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
 
 [Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
+
+[CppCoreGuidelines] [If you can avoid defining default operations, do](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#Rc-zero)
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
