--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -340,8 +340,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Expects: `U` meets the `Cpp17CopyConstructible` requirements.
-* Returns: A `indirect_value<T>` owning an object of type ``
-  direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
