--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -16,14 +16,13 @@ Editor: Antony Peacock, ant.peacock@gmail.com
 </pre>
 
 # Abstract
-Add a class template, indirect_value, to the C++ Standard Library to support free-store-allocated objects with value
--like semantics.
+Add a class template, `indirect_value`, to the C++ Standard Library to support free-store-allocated objects with value-like semantics.
 
 # Introduction
-The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An indirect_value may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
+The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
 ## Motivation - a perfect PImpl
-In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter 98].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
+In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
 ```
 // Header file
@@ -49,27 +48,22 @@ For convenience, the widget class will be referred to as the “visible class”
 ### Issues with `unique_ptr<impl>` implementation of PImpl Idiom
 #### const-propagation
 
-Using <code>std::unique_ptr</code> to store the implementation object introduces an issue: within a `const`-qualified member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
+Using <code>std::unique_ptr</code> to store the implementation object introduces an issue - within a `const`-qualified
+ member function, an instance of the visible class can mutate data inside the implementation object.  This is because <code>const</code> qualification applies only to the `unique_ptr` value, and not the pointed-to-object.  
 
-The compiler is unable to give thread-compatibility guarantees for `const` objects when
-`const` is not propagated - `const` does not mean immutable in the face of pointer-like-member data.
+The compiler is unable to give thread-compatibility guarantees for `const` objects when `const` is not propagate: `const` does not mean immutable in the face of pointer-like-member data.
 
-The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const`- and non-`const`-qualified overloads
-for `operator*` and `operator->`. 
+The desired semantics of a PImpl-owner are value-like, like those of `std::optional` which has appropriate `const` and non-`const`-qualified overloads for `operator*` and `operator->`. 
 
 #### copies
 The copy-constructor and copy-assignment operator of `std::unique_ptr` are deleted. Users of a class with a `std::unique_ptr` member will be required to implement copy-construction and copy-assignment.  Implementation of these methods for a class with PImpl members is non-trivial [S. Meyers].
 
 ### Issues with `polymorphic_value<impl>` implementation of PImpl Idiom
-The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our
-requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
-To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to
-virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
+The class template `polymorphic_value` confers value-like semantics on a free-store-allocated object. This satisfies our requirement for const-propagation and a compiler generated copy constructor and copy assignment operator but incurs an additional cost in supporting polymorphism.
+To implement deep copies of subclasses, `polymorphic_value` employs type-erasure which has run-time cost due to virtual dispatch and memory indirection. We do not need to support polymorphism for our PImpl object and should not pay for what we do not use.
 
 ### Perfect Implementation of the PImpl Idiom
-Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike
- `polymorphic_value`,
-`indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
+Like `polymorphic_value`, `indirect_value` confers value-like semantics on a free-store-allocated object. Unlike `polymorphic_value`, `indirect_value` does not support polymorphism - `indirect_value<T>` is either empty or contains an object of type `T`.
 
 ```
 // Header file
@@ -107,7 +101,7 @@ There have been previous proposal for deep-copying smart pointers that proposed 
 This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this topic [A. Upadyshev].
 
 ## Completeness of T*
-Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for indirect_value, the table outlines the expected behaviour for incomplete pointer types:
+Recommended practice for pointer-to-implementation of PImpl classes since C++11 has been to store the pointer-to-implementation in a std::unique_ptr [S. Meyers]. Smart pointer types in the Standard Library expect that some of the members can be instantiated with incomplete types [H.Hinnant]. Similarly, this is the case for `indirect_value`, the table outlines the expected behaviour for incomplete pointer types:
 
 <table>
 <thead>
@@ -182,11 +176,11 @@ Recommended practice for pointer-to-implementation of PImpl classes since C++11 
 </table>
 
 ## Impact on the standard
-This proposal is a pure library extension. It requires additions to be made to the standard library header &lt;memory&gt;.
+This proposal is a pure library extension. It requires additions to be made to the standard library header `<memory>`.
 
 # Technical specifications
 
-## X.X Class template default_copy [default.copy]
+## X.X Class template `default_copy` [default.copy]
 ```
 namespace std {
     template <class T>
@@ -195,32 +189,31 @@ namespace std {
     };
 } // namespace std
 ```
-The class template default_copy serves as the default copier for the class
-template indirect_value.
+The class template default_copy serves as the default copier for the class template `indirect_value`.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
 <code>T* operator()(const T& t) const;</code>
 * Returns: <code>new T(t);</code>
 
-## X.Y Class template indirect_value [indirect_value]
-### X.Y.1 Class template indirect_value general [indirect_value.general]
-An indirect_value is an object that owns another object and manages that other object through a pointer. More precisely, an indirect value is an object **v** that stores a pointer to a second object **p** and will dispose of **p** when **v** is itself destroyed (e.g., when leaving block scope (9.7)). In this context, **v** is said to own **p**.
+## X.Y Class template `indirect_value` [indirect_value]
+### X.Y.1 Class template `indirect_value` general [indirect_value.general]
+An `indirect_value` is an object that owns another object and manages that other object through a pointer. More precisely, an indirect value is an object `v` that stores a pointer to a second object `p` and will dispose of `p` when `v` is itself destroyed (e.g., when leaving block scope (9.7)). In this context, `v` is said to own `p`.
 
-An indirect_value object is empty if it does not own a pointer.
+An `indirect_value` object is empty if it does not own a pointer.
 
-Copying a non-empty indirect_value will copy the owned object so that the copied indirect_value will have its own unique copy of the owned object.
+Copying a non-empty `indirect_value` will copy the owned object so that the copied `indirect_value` will have its own unique copy of the owned object.
 
-Copying from an empty indirect_value produces another empty indirect_value.
+Copying from an empty `indirect_value` produces another empty `indirect_value`.
 
 Copying and disposal of the owned object can be customised by supplying a copier and deleter.
 
-The template parameter T of indirect_value must be a non-union class type.
+The template parameter `T` of `indirect_value` must be a non-union class type.
 
-The template parameter T of indirect_value may be an incomplete type.
+The template parameter `T` of `indirect_value` may be an incomplete type.
 
 *[Note: Implementations are encouraged to avoid the use of dynamic memory for ownership of small objects.]*
 
-### X.Y.2 Class template indirect_value synopsis [indirect_value.synopsis]
+### X.Y.2 Class template `indirect_value` synopsis [indirect_value.synopsis]
 
 ```
     template <class T, class C = std::default_copy<T>, class D = std::default_delete<T>>
@@ -268,75 +261,75 @@ The template parameter T of indirect_value may be an incomplete type.
 
 ```
 
-### X.Y.3 Class template indirect_value constructors [indirect_value.ctor]
+### X.Y.3 Class template `indirect_value` constructors [indirect_value.ctor]
 
 <code>constexpr indirect_value() noexcept;</code>
-* Remarks: The method shall work with incomplete pointer type for T.
-* Effects: Constructs an empty indirect_value.
-* Postconditions: bool(*this) == false
+* Remarks: The method shall work with incomplete pointer type for `T`.
+* Effects: Constructs an empty `indirect_value`.
+    * Postconditions: `bool(*this) == false`.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
-* Effects: Creates an indirect_value object that owns the pointer p. If p is non-null then the copier and deleter of the indirect_value constructed are moved from c and d.
-* Requires: C and D satisfy the requirements of CopyConstructible. If p is non-null then the expression c(*p) returns an object of type T*. The expression d(p) is well-formed, has well-defined behaviour, and does not throw exceptions. 
-* Postconditions: bool(*this) == bool(p).
-* Remarks: A custom copier and deleter are said to be ‘present’ in a indirect_value initialised with this constructor.
+* Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`.
+* Requires: `C` and `D` satisfy the requirements of CopyConstructible. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions. 
+* Postconditions: `bool(*this) == bool(p)`.
+* Remarks: A custom copier and deleter are said to be ‘present’ in a `indirect_value` initialised with this constructor.
 
 <code>indirect_value(const indirect_value& p);</code>
-* Constraints: is_copy_constructible_v<T>
-* Effects: Creates a indirect_value object that owns a copy of the object managed by p. The copy is created by the copier in p. If p has a custom copier and deleter then the custom copier and deleter of the indirect_value constructed are copied from those in p.
-* Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
-* Postconditions: bool(*this) == bool(p).
+* Constraints: `is_copy_constructible_v<T>`
+* Effects: Creates a `indirect_value` object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`. If `p` has a custom copier and deleter then the custom copier and deleter of the `indirect_value` constructed are copied from those in `p`.
+* Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
+* Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
-* Effects: Move-constructs an indirect_value instance from p. If p has a custom copier and deleter then the copier and deleter of the indirect_value constructed are the same as those in p.
-* Postconditions: *this contains the old value of p. p is empty.
-* Remarks: The method shall work with incomplete pointer type for T.
+* Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
+* Postconditions: `*this` contains the old value of `p`. `p` is empty.
+* Remarks: The method shall work with incomplete pointer type for `T`.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
 
-### X.Y.4 Class template indirect_value destructor [indirect_value.dtor]
+### X.Y.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
-* Effects: If get() == nullptr there are no effects. If a custom deleter d is present then d(p) is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+* Effects: If `get() == nullptr` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
 
-### X.Y.5 Class template indirect_value assignment [indirect_value.assignment]
+### X.Y.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
-* Constraints: is_copy_assignable<T>
-* Effects: *this owns a copy of the resource managed by p. If p has a custom copier and deleter then the copy is created by the copier in p, and the copier and deleter of *this are copied from those in p. Otherwise, the resource managed by *this is initialised by the copy constructor of the resource managed by p.
-* Throws: Any exception thrown by the copier or bad_alloc if required storage cannot be obtained.
-* Returns: *this.
-* Postconditions: bool(*this) == bool(p).
+* Constraints: `is_copy_assignable<T>`
+* Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
+* Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
+* Returns: `*this`.
+* Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
-* Effects: Ownership of the resource managed by p is transferred to this. If p has a custom copier and deleter then the copier and deleter of *this is the same as those in p.
-* Returns: *this.
-* Postconditions: *this contains the old value of p. p is empty.
+* Effects: Ownership of the resource managed by `p` is transferred to this. If `p` has a custom copier and deleter then the copier and deleter of `*this` is the same as those in `p`.
+* Returns: `*this`.
+* Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
-### X.Y.6 Class template indirect_value modifiers [indirect_value.modifiers]
+### X.Y.6 Class template `indirect_value` modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
-* Effects: Exchanges the contents of p and *this.
-* Remarks: The method shall work with incomplete pointer type for T.
+* Effects: Exchanges the contents of `p` and `*this`.
+* Remarks: The method shall work with incomplete pointer type for `T`.
 
-### X.Y.7 Class template indirect_value observers [indirect_value.observers]
+### X.Y.7 Class template `indirect_value` observers [indirect_value.observers]
 ```
 T& operator*();
 const T& operator*() const;
 ```
-* Requires: bool(*this).
+* Requires: `bool(*this)`.
 * Returns: A reference to the owned object.
 
 ```
 T* operator->() noexcept;
 const T* operator->() const noexcept;
 ```
-* Requires: bool(*this).
+* Requires: `bool(*this)`.
 * Returns: A pointer to the owned object. 
-* Remarks: The method shall work with incomplete pointer type for T.
+* Remarks: The method shall work with incomplete pointer type for `T`.
 
 <code>explicit operator bool() const noexcept;</code>
-* Returns: false if the indirect_value is empty, otherwise true.
-* Remarks: The method shall work with incomplete pointer type for T.
+* Returns: false if the `indirect_value` is empty, otherwise true.
+* Remarks: The method shall work with incomplete pointer type for `T`.
 
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
@@ -347,8 +340,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Expects: `U` meets the `Cpp17CopyConstructible` requirements.
-* Returns: A `indirect_value<T>` owning an object of type ``
-  direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
@@ -363,16 +355,10 @@ The authors would like to thank Thomas Russell, and Andrew Bennieston for useful
 
 [H. Hinnant] [“Incomplete types and shared_ptr / unique_ptr”, Howard Hinnant, 2011](http://howardhinnant.github.io/incomplete.html)
 
-[H. Sutter 98] ["Pimpls - Beauty Marks You Can Depend On", Herb Sutter, 1998](http://www.gotw.ca/publications/mill04.htm)
-
-[H. Sutter 11] ["GotW #100: Compilation Firewalls", Herb Sutter, 2011](https://herbsutter.com/gotw/_100/)
+[H. Sutter] ["Pimpls - Beauty Marks You Can Depend On", Herb Sutter, 1998](http://www.gotw.ca/publications/mill04.htm)
 
 [Impl] [Reference implementation: indirect_value, J.B.Coe](https://github.com/jbcoe/indirect_value)
-
-[CppCoreGuidelines] [If you can avoid defining default operations, do](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#Rc-zero)
 
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
 [W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
-
-[Meneide et al] [p1132r6: out_ptr - a scalable output pointer abstraction, JeanHeyd Meneide, Todor Buyukliev, Isabella Muerte, 2019](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p1132r6.html)
