Add headers for edits/additions that are needed

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -21,6 +21,39 @@ Add a class template, `indirect_value`, to the C++ Standard Library to support f
 # Introduction
 The class template, `indirect_value`, confers value-like semantics on a free-store-allocated object. An `indirect_value` may hold an object of a class T, copying the `indirect_value` will copy the object `T`, and `const`ness will propagate from the owning classes to the `indirect_value` type.
 
+## Motivating uses
+
+### PImpl
+
+### Linked lists
+
+```~cpp
+class Node {
+    int data_;
+    Node* next_;
+}; 
+
+class Node {
+    int data_;
+    indirect_value<Node> next_;
+}; 
+```
+
+### Hot-cold splitting
+
+## Should default constructed state be a null state?
+
+`optional<indirect_value<T>>` vs nullable `indirect_value<T>`
+
+nullable indirect value has performance benefits that optional<indirect_value> cannot gain.
+
+## Vocabulary - 'pointers' and 'values'
+
+## Allocators 
+Discuss why we do not support allocators. Copier and deleter can give us all we need that allocators can do.
+
+For custom allocators we should guarantee that the allocator is used, for std::allocator we can use an SBO.
+
 ## Motivation - a perfect PImpl
 In C++, when anything in a class definition changes, dependent classes require recompilation. As early as 1992 the Handle/Body idiom was suggested to break this dependency [J. Coplien]. From this pattern, the PImpl idiom was specialised [H. Sutter].  Almost three decades on since these ideas started circulating implementation of the PImpl idiom requires thought about implementation details around copying and to support this feature requires user intervention. 
 
