--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -23,6 +23,25 @@ The class template, `indirect_value`, confers value-like semantics on a free-sto
 
 ## Motivating uses
 
+It may be desirable for a class member to be an incomplete type or for the storage used by the member object to be separate from the class.
+In both such cases, the member would traditionally be represented as pointer:
+
+```
+class MyClass {
+    AType data_member_;
+    AnotherType* indirect_data_member_;
+}
+```
+
+The author of such a class will need to implement special member functions as the compiler-generated special member functions will
+not function correctly (indirect data will not be copied, assigned to or deleted, only the pointer). 
+
+Special care will be needed when using the class in multithreaded environments. An instance of `MyClass` accessed through a const-access-path
+will not propagate the `const`-ness to the indirect data (only to the pointer itself) as pointers do not propagate `const` to their pointees.
+
+The class template `indirect_value` is a drop-in replacement for pointer members in cases where data referenced by the pointer member is logically
+part of the class. Use of `indirect_value` will ensure that the compiler-generated special member functions behave correctly and that `const` is propagated to indirect data.
+
 ### PImpl
 
 ### Linked lists
